# random_lcg

./: Cargo.toml  README.md
src/: lib.rs
src/prelude/: mod.rs
