[package]
name = "random_lcg"
version = "0.3.1"
edition = "2021"
authors = ["Pedro Alves <pedromfa98@gmail.com>"]
description = "Simple lcg random number generator"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/Pxdr0-A/random_lcg.git"
repository = "https://github.com/Pxdr0-A/random_lcg.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
